[project]
name = "apple-toolchain-mcp"
version = "1.0.1"
description = "MCP server for Apple LLVM toolchain operations - compile, link, inspect Mach-O binaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
apple-toolchain-mcp = "apple_toolchain_mcp:main"
