[project]
name = "contract-deployer-mcp"
version = "1.0.1"
description = "MCP server for deploying and verifying Solidity smart contracts on EVM chains"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.2",
    "web3>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
contract-deployer-mcp = "contract_deployer_mcp:main"
