[project]
name = "keeper-manager-mcp"
version = "1.1.0"
description = "MCP server for Aave V4 eMode liquidation keeper - auto-snipe undercollateralized positions on Base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.2",
    "web3>=6.0.0",
]

[project.scripts]
keeper-manager-mcp = "keeper_manager_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
